--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 build:
+  before_script:
+    - apk add --no-cache curl
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $CI_REGISTRY/fpallas/blog:latest .
     - docker push $CI_REGISTRY/fpallas/blog:latest
+    - 'curl -H "Authorization: Bearer $WATCHTOWER_HTTP_API_TOKEN" http://watchtower.fpallas.com/v1/update'
