--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ build:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $CI_REGISTRY/fpallas/blog:latest .
     - docker push $CI_REGISTRY/fpallas/blog:latest
-    - 'curl -H "Authorization: Bearer $WATCHTOWER_HTTP_API_TOKEN" https://watchtower.fpallas.com/v1/update'
+    - 'curl --fail-with-body --silent --show-error -H "Authorization: Bearer $WATCHTOWER_HTTP_API_TOKEN" https://watchtower.fpallas.com/v1/update'
   rules:
     - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
