--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,7 @@
 build:
-  before_script:
-    - apk add --no-cache curl
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/fpallas/blog:latest .
-    - docker push $CI_REGISTRY/fpallas/blog:latest
-    - 'curl --fail-with-body --silent --show-error -H "Authorization: Bearer $WATCHTOWER_HTTP_API_TOKEN" https://watchtower.fpallas.com/v1/update'
+    - docker build -t $CI_REGISTRY_IMAGE:latest .
+    - docker push $CI_REGISTRY_IMAGE:latest
   rules:
     - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
